# territoires-en-transitions

./: .actrc  .earthlyignore  .env.sample  .eslintrc.json  .gitignore  .npmrc  .nxignore  .pnp.cjs  .space.kts  .tsbuildinfo  .tsconfig.json  AGENTS.md  API.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  DISCOVERED.md  Earthfile  LICENSE  Makefile  Procfile  README.md  Readme  SECURITY.md  TEST_SUMMARY.md  awscli_config  dev-docker-compose.yml  docker-compose.yaml  docker-compose.yml  docs  eslint-frontend.config.mjs  eslint-nextjs.config.mjs  eslint.config.mjs  gen_types.sh  make_dot_env.sh  nx.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  (+8 more)
api/: .gitignore  Dockerfile  Pipfile  Procfile  README.md  aerich.ini  aerich_settings.py  app.py  dev_server.py  docker-compose.yaml  local_server.py  pyproject.toml  requirements.txt  scalingo.sh  server.py  setup.py
api/.github/workflows/: test.yml
api/api/: app.py  dev_server.py  server.py
api/api/config/: __init__.py  configuration.py  database.py  openapi.py
api/api/notation/: economie_circulaire.py  notation.py  referentiel.py  referentiel_eci.py  referentiels.py
api/api/requests/: action_custom.http
api/api/routers/: action_status.py  fiche_action_categorie.py  indicateur_personnalise_value.py  mesure_custom.py
api/api/utils/: connection_api.py  endpoints.py  get_pydantic_in_model_creator.py  get_referentiel.py  indicateur_value_generic_api.py  on_publish_check_epci.py
api/config/: configuration.py  database.py
api/migrations/models/: 0_20210416151350_init.sql  10_20210618102816_epcis.sql  11_20210623152210_non_destructive_changes.sql  12_20210623170715_action_meta.sql  13_20210713100602_fiche_action_en_retard.sql  14_20210730164925_add_meta_to_indicateur_personnalise.sql  wip_plan.sql  (+16 more)
api/requests/: action_custom.http  action_meta.http  action_status.http  auth.http  basics.http  droits.http  epci.http  fiche_action.http  http-client.env.json  indicateur_value.http  mesure_custom.http  notation.http  plan_action.http  reports.http  users.http
api/routers/: action_custom.py  action_status.py  env.py  hello.py  indicateur_value.py  mesure_custom.py
api/sql/: categories_to_plans_migration.sql
api/sql_reports/: daily_active_collectivite_count.sql  daily_created_action_referentiel_status_count.sql  daily_created_fiche_action_count.sql  daily_created_indicateur_personnalise_count.sql  daily_created_indicateur_referentiel_resultat_count.sql  daily_user_count.sql  drafts.sql  functionnalities_usage_proportion.sql  user_count.sql
api/tests/: auth_utils.py  test_fiche_action.py  test_models_tortoise_action_custom.py  test_notation.py  test_notation_economie_circulaire.py  test_referentiel.py  test_referentiel_sanity.py  test_routers_action_custom.py  test_routers_action_meta.py  test_routers_action_status.py  test_routers_auth.py  test_routers_epci.py  test_routers_fiche_action.py  test_routers_fiche_action_categorie.py  test_routers_hello.py  test_routers_indicateur_personnalise.py  test_routers_indicateur_personnalise_value.py  test_routers_indicateur_referentiel_commentaire.py  test_routers_indicateur_value.py  test_routers_mesure_custom.py  test_routers_utilisateur_droits.py
tools/: README.md  pyproject.toml
tools/tests/: __init__.py  test_utils_s3.py
tools/tools/: __init__.py  cli_deploy.py
(+15099 files in other folders)
