[tool]
[tool.poetry]
name = "api"
version = "0.0.1"
description = "an api"
authors = ["Florian d'Erfurth <florian@derfurth.com>", "Fanny Cheung <fanny.cheung@beta.gouv.fr>"]
readme = "README.md"
license = "todo"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "api" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
tortoise-orm = "^0.16.21"
pydantic = "^1.8.1"
asyncpg = "^0.22.0"
loguru = "^0.5.3"
mangum = "^0.11.0"
requests = "^2.25.1"
asynctest = "^0.13.0"
uvicorn = "^0.13.4"


[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = {extras = ["toml"], version = "^5.4"}
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
yapf = "*"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
serve = 'local_server:run_locally'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
branch = true
source = ["api"]

[tool.coverage.report]
show_missing = true
