[tool.poetry]
name = "api"
version = "0.0.1"
description = "territoires en transitions API"
authors = ["Florian d'Erfurth <florian@derfurth.com>", "Fanny Cheung <fanny.cheung@beta.gouv.fr>"]
readme = "README.md"
license = "todo"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
tortoise-orm = "^0.16.21"
pydantic = "^1.8.1"
asyncpg = "^0.22.0"
loguru = "^0.5.3"
mangum = "^0.11.0"
requests = "^2.25.1"
asynctest = "^0.13.0"
uvicorn = "^0.13.4"


[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = { extras = ["toml"], version = "^5.4" }
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
yapf = "*"
pytest-cov = "*"
black = "21.5b1"

[tool.poetry.scripts]
serve = 'dev_server:serve'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["api"]

[tool.coverage.report]
show_missing = true
