[tool]
[tool.poetry]
name = "tools"
version = "0.0.1"
description = "CLI tools powered by typer."
authors = ["Florian d'Erfurth <florian@derfurth.com>", "Fanny Cheung <fanny.cheung@beta.gouv.fr>"]
readme = "README.md"
license = "todo"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "tools" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"

# Command line
typer = "^0.3.2"
boto3 = "^1.17.11"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = { extras = ["toml"], version = "^5.4" }
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
yapf = "*"
pytest-cov = "*"

[tool.poetry.scripts]
deploy = 'tools.cli_deploy:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
branch = true
source = ["tools"]

[tool.coverage.report]
show_missing = true
